--- a/for visualization.ipynb
+++ b/for visualization.ipynb
@@ -7,10 +7,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'plotly.data' has no attribute 'frame'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/minjoonlim/Desktop/python workspace/mjmj/for visualization.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20visualization.ipynb#ch0000005?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msb\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20visualization.ipynb#ch0000005?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpl\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20visualization.ipynb#ch0000005?line=3'>4</a>\u001b[0m df \u001b[39m=\u001b[39m pl\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49mframe\u001b[39m.\u001b[39miris()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20visualization.ipynb#ch0000005?line=4'>5</a>\u001b[0m df\u001b[39m.\u001b[39mplotly\u001b[39m.\u001b[39mexpress\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'plotly.data' has no attribute 'frame'"
+     ]
+    }
+   ],
+   "source": [
+    "import seaborn as sb\n",
+    "import plotly as pl\n",
+    "\n",
+    "df = pl.data.frame.iris()\n",
+    "df.plotly.express"
+   ]
   },
   {
    "cell_type": "code",
