--- a/for Practice/Python_data_ws/Pandas/220411_08. 데이터 선택 (iloc).ipynb
+++ b/for Practice/Python_data_ws/Pandas/220411_08. 데이터 선택 (iloc).ipynb
@@ -1,6 +1,615 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 08. 데이터 선택 (iloc) : integer location\n",
+    "위치를 이용하여 원하는 row에서 원하는 column 선택"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>이름</th>\n",
+       "      <th>학교</th>\n",
+       "      <th>키</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>수학</th>\n",
+       "      <th>과학</th>\n",
+       "      <th>사회</th>\n",
+       "      <th>SW특기</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>지원번호</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1번</th>\n",
+       "      <td>채치수</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>197</td>\n",
+       "      <td>90</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>85</td>\n",
+       "      <td>Python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2번</th>\n",
+       "      <td>정대만</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>184</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>50</td>\n",
+       "      <td>55</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Java</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3번</th>\n",
+       "      <td>송태섭</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>168</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>70</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Javascript</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4번</th>\n",
+       "      <td>서태웅</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>187</td>\n",
+       "      <td>40</td>\n",
+       "      <td>60</td>\n",
+       "      <td>70</td>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5번</th>\n",
+       "      <td>강백호</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>188</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>35</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6번</th>\n",
+       "      <td>변덕규</td>\n",
+       "      <td>능남고</td>\n",
+       "      <td>202</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>85</td>\n",
+       "      <td>80</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7번</th>\n",
+       "      <td>황태산</td>\n",
+       "      <td>능남고</td>\n",
+       "      <td>188</td>\n",
+       "      <td>55</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>PYTHON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8번</th>\n",
+       "      <td>윤대협</td>\n",
+       "      <td>능남고</td>\n",
+       "      <td>190</td>\n",
+       "      <td>100</td>\n",
+       "      <td>85</td>\n",
+       "      <td>95</td>\n",
+       "      <td>95</td>\n",
+       "      <td>95</td>\n",
+       "      <td>C#</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       이름   학교    키   국어   영어   수학  과학  사회        SW특기\n",
+       "지원번호                                                  \n",
+       "1번    채치수  북산고  197   90   85  100  95  85      Python\n",
+       "2번    정대만  북산고  184   40   35   50  55  25        Java\n",
+       "3번    송태섭  북산고  168   80   75   70  80  75  Javascript\n",
+       "4번    서태웅  북산고  187   40   60   70  75  80         NaN\n",
+       "5번    강백호  북산고  188   15   20   10  35  10         NaN\n",
+       "6번    변덕규  능남고  202   80  100   95  85  80           C\n",
+       "7번    황태산  능남고  188   55   65   45  40  35      PYTHON\n",
+       "8번    윤대협  능남고  190  100   85   95  95  95          C#"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"score.csv\", index_col='지원번호')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름         채치수\n",
+       "학교         북산고\n",
+       "키          197\n",
+       "국어          90\n",
+       "영어          85\n",
+       "수학         100\n",
+       "과학          95\n",
+       "사회          85\n",
+       "SW특기    Python\n",
+       "Name: 1번, dtype: object"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0] # 0번째 위치의 데이터 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름      강백호\n",
+       "학교      북산고\n",
+       "키       188\n",
+       "국어       15\n",
+       "영어       20\n",
+       "수학       10\n",
+       "과학       35\n",
+       "사회       10\n",
+       "SW특기    NaN\n",
+       "Name: 5번, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>이름</th>\n",
+       "      <th>학교</th>\n",
+       "      <th>키</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>수학</th>\n",
+       "      <th>과학</th>\n",
+       "      <th>사회</th>\n",
+       "      <th>SW특기</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>지원번호</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1번</th>\n",
+       "      <td>채치수</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>197</td>\n",
+       "      <td>90</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>85</td>\n",
+       "      <td>Python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2번</th>\n",
+       "      <td>정대만</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>184</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>50</td>\n",
+       "      <td>55</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Java</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3번</th>\n",
+       "      <td>송태섭</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>168</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>70</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Javascript</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4번</th>\n",
+       "      <td>서태웅</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>187</td>\n",
+       "      <td>40</td>\n",
+       "      <td>60</td>\n",
+       "      <td>70</td>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5번</th>\n",
+       "      <td>강백호</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>188</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>35</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       이름   학교    키  국어  영어   수학  과학  사회        SW특기\n",
+       "지원번호                                                \n",
+       "1번    채치수  북산고  197  90  85  100  95  85      Python\n",
+       "2번    정대만  북산고  184  40  35   50  55  25        Java\n",
+       "3번    송태섭  북산고  168  80  75   70  80  75  Javascript\n",
+       "4번    서태웅  북산고  187  40  60   70  75  80         NaN\n",
+       "5번    강백호  북산고  188  15  20   10  35  10         NaN"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0:5] # 0에서 4번째 위치 데이터"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'북산고'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0, 1] # R에서 df[row,colum] 과 동일하네! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "188"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5번 학생의 키 데이터 ?\n",
+    "df.iloc[4,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "지원번호\n",
+       "1번    197\n",
+       "2번    184\n",
+       "Name: 키, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[[0,1],2] # 0, 1번째 학생 키 데이터"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>지원번호</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1번</th>\n",
+       "      <td>90</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2번</th>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      국어  영어\n",
+       "지원번호        \n",
+       "1번    90  85\n",
+       "2번    40  35"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[[0,1], [3,4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>수학</th>\n",
+       "      <th>과학</th>\n",
+       "      <th>사회</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>지원번호</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1번</th>\n",
+       "      <td>90</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2번</th>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>50</td>\n",
+       "      <td>55</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3번</th>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>70</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4번</th>\n",
+       "      <td>40</td>\n",
+       "      <td>60</td>\n",
+       "      <td>70</td>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5번</th>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>35</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      국어  영어   수학  과학  사회\n",
+       "지원번호                     \n",
+       "1번    90  85  100  95  85\n",
+       "2번    40  35   50  55  25\n",
+       "3번    80  75   70  80  75\n",
+       "4번    40  60   70  75  80\n",
+       "5번    15  20   10  35  10"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0:5, 3:8] # 0 - 4번째 학생 중, 3 - 7번째 데이터 가져옴"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,8 +618,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.3 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.3"
   },
   "orig_nbformat": 4
  },
