--- a/for Practice/DataScienceBook_DS/NumpyIntro.ipynb
+++ b/for Practice/DataScienceBook_DS/NumpyIntro.ipynb
@@ -343,6 +343,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.23, 1.23, 1.23],\n",
+       "       [1.23, 1.23, 1.23],\n",
+       "       [1.23, 1.23, 1.23]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.full((3,3), 1.23) # 모든 요소를 지정된 값으로 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(3) # 단위 행렬임. 정사각이라 길이만 정해주면 됨\n",
+    "# 주 대각선 1, 나머지 0 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [1., 1., 0.],\n",
+       "       [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.tri(3) # 삼각 행렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1 = np.ones(10)\n",
+    "\n",
+    "print(a1)\n",
+    "np.zeros_like(a1) # a1을 딴 동일 배열에 0으로! \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1],\n",
+       "       [1, 1, 1],\n",
+       "       [1, 1, 1]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a3 = np.arange(1,10).reshape(3,3)\n",
+    "a3\n",
+    "np.ones_like(a3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.        ,  1.12883789,  1.27427499,  1.43844989,  1.62377674,\n",
+       "        1.83298071,  2.06913808,  2.33572147,  2.6366509 ,  2.97635144,\n",
+       "        3.35981829,  3.79269019,  4.2813324 ,  4.83293024,  5.45559478,\n",
+       "        6.15848211,  6.95192796,  7.8475997 ,  8.8586679 , 10.        ])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0,1,5) # 0 - 1까지 5개 구간\n",
+    "np.logspace(0,1, 20) # 로그값으로 구함 "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
