--- a/for Practice/DataScienceBook_DS/NumpyIntro.ipynb
+++ b/for Practice/DataScienceBook_DS/NumpyIntro.ipynb
@@ -488,6 +488,619 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.07117895, 0.30465241, 0.3403035 ],\n",
+       "       [0.79227099, 0.14909009, 0.0680513 ],\n",
+       "       [0.7885577 , 0.12169142, 0.05831   ]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random((3,3)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8, 7, 6],\n",
+       "       [5, 2, 1],\n",
+       "       [5, 2, 0]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(0, 10, (3,3)) # 정수라 범위 설정 필요 0, 에서 10, 까지 (3,3) 으로"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.31183285, -0.68362958,  1.59447302],\n",
+       "       [ 2.55647419, -0.46237141, -0.2049431 ],\n",
+       "       [ 0.18135869,  1.12283851, -0.49318928]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.normal(0, 1, (3,3)) # 평균 0, 표평 1, (3,3) 으로"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.74866481, 0.49830674, 0.58613312],\n",
+       "       [0.88963998, 0.98213887, 0.91760635],\n",
+       "       [0.03863721, 0.55339264, 0.55388316]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(3,3) # uniform distribution 균등분포 고려한 랜덤 수 배열"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.74300946,  0.24016705, -0.40527358],\n",
+       "       [ 0.00944639,  0.46150735, -2.13798231],\n",
+       "       [-0.03993977,  0.89496611,  0.37165678]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randn(3,3) # 표준정규분포 자동 고려라 3,3 shape만 기재"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros(20, dtype=int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((3,3), dtype=bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.full((3,3), 1.0, dtype=float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array('2020-01-01', dtype='datetime64[D]')"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date = np.array('2020-01-01', dtype=np.datetime64)\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2020-01-01', '2020-01-02', '2020-01-03', '2020-01-04',\n",
+       "       '2020-01-05', '2020-01-06', '2020-01-07', '2020-01-08',\n",
+       "       '2020-01-09', '2020-01-10', '2020-01-11', '2020-01-12'],\n",
+       "      dtype='datetime64[D]')"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date + np.arange(12) # 1월 1일부터 12개         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.datetime64('2020-01-01T12:00')"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime = np.datetime64('2020-01-01 12:00')\n",
+    "datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 배열 조회"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def array_info(array):\n",
+    "    print(array)\n",
+    "    print(\"ndim:\", array.ndim)\n",
+    "    print(\"shape:\", array.shape)\n",
+    "    print(\"dtype:\", array.dtype)\n",
+    "    print(\"size:\", array.size)\n",
+    "    print(\"itemsize:\", array.itemsize)\n",
+    "    print(\"nbytes:\", array.nbytes)\n",
+    "    print(\"strides:\", array.strides)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1 = np.array([4,5,6,4,5,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6 4 5 6]\n",
+      "ndim: 1\n",
+      "shape: (6,)\n",
+      "dtype: int64\n",
+      "size: 6\n",
+      "itemsize: 8\n",
+      "nbytes: 48\n",
+      "strides: (8,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_info(a1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 인덱싱"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6 4 5 6]\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a1)\n",
+    "print(a1[0]) # 파이썬과 동일하게 사용 가능, 슬라이싱도 ! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 5]\n",
+      " [6 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 팬시 인덱싱\n",
+    "\n",
+    "ind = np.array([[0,1], \n",
+    "                [2,0]])\n",
+    "\n",
+    "print(a1[ind]) # 1차원 배열이지만, 2차원 인덱스 넣으면 2차원으로 반환"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 배열값 삽입/수정/삭제/복사"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6 4 5 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4,  5, 10,  6,  4,  5,  6])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(a1)\n",
+    "b1 = np.insert(a1, 0, 10) # a1 array의 0번째 자리에 '10'을 넣어라! \n",
+    "b1 # a1에 영향 안줌\n",
+    "c1 = np.insert(a1, 2, 10)\n",
+    "c1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1, 10,  2,  3],\n",
+       "       [ 4, 10,  5,  6],\n",
+       "       [ 7, 10,  8,  9]])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2 = np.arange(1,10).reshape((3,3))\n",
+    "b2 = np.insert(a2, 1, 10, axis=0) # axis 0 : row 기준\n",
+    "b2\n",
+    "c2 = np.insert(a2, 1, 10, axis=1) # axis 1 : column 기준\n",
+    "c2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 0 9 0 0 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([9, 4, 9, 4, 4, 6])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(a1) \n",
+    "a1[0] = 1\n",
+    "a1[1] = 2\n",
+    "a1[2] = 3\n",
+    "a1 # 그냥 인덱스로 수정 \n",
+    "a1[:3] = 9 # 슬라이싱 포함 모든 값\n",
+    "a1 \n",
+    "i = np.array([1,3,4]) # array 설정해서\n",
+    "a1[i] = 0 # fancy indexing으로 1,3,4 위치를 0으로 \n",
+    "a1\n",
+    "a1[i] += 4 # 여기도 추가 4 가능 \n",
+    "a1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1]\n",
+      " [4 2 9]\n",
+      " [7 8 9]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 1],\n",
+       "       [4, 2, 0],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(a2)\n",
+    "a2[0,0] = 1\n",
+    "a2[1,1] = 2\n",
+    "a2[2,2] = 3\n",
+    "a2[0] = 1 # 첫째 로우 다 1\n",
+    "a2\n",
+    "a2[1:, 2] = 9 # 2,3 row 및 2 col 9로 수정\n",
+    "a2\n",
+    "\n",
+    "row = np.array([0,1])\n",
+    "col = np.array([1,2])\n",
+    "a2[row, col] = 0  # row 0,1과 col 1,2 바꿔줘\n",
+    "a2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9, 4, 9, 4, 4, 6])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " # delete() : 배열 특정 위치에 값 삭제\n",
+    " # axis 지정하지 않으면 1차원 배열로 반환\n",
+    " # 삭제할 방향을 axis로 지정\n",
+    " # 원본 배열 변경없이 새로운 배열 변환 \n",
+    " a1\n",
+    "b1 = np.delete(a1,1)\n",
+    "b1 # a1 그대로 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1]\n",
+      " [4 2 0]\n",
+      " [7 8 9]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1],\n",
+       "       [4, 0],\n",
+       "       [7, 9]])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(a2) \n",
+    "b2 = np.delete(a2, 1, axis=0) # 4,2,0 사라질 것\n",
+    "b2\n",
+    "c2 = np.delete(a2, 1, axis=1) # 0,2,8 사라질 것\n",
+    "c2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1]\n",
+      " [4 2 0]\n",
+      " [7 8 9]]\n",
+      "[[1 4 7]\n",
+      " [0 2 8]\n",
+      " [1 0 9]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 배열 변환\n",
+    "\n",
+    "print(a2)\n",
+    "print(a2.T) # 행, 열 변환\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1]\n",
+      " [4 2 0]\n",
+      " [7 8 9]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 4, 7],\n",
+       "       [0, 2, 8],\n",
+       "       [1, 0, 9]])"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(a2)\n",
+    "a2.swapaxes(1,0) # T와 같음 "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
