--- a/for Practice/DataScienceBook_DS/NumpyIntro.ipynb
+++ b/for Practice/DataScienceBook_DS/NumpyIntro.ipynb
@@ -268,8 +268,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 재구조화 (reshape)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -280,16 +287,40 @@
        "       [7, 8, 9]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# reshape 을 사용한 배열 재구조화\n",
-    "\n",
+    "n1 = np.arange(1,10)\n",
     "grid = np.arange(1,10).reshape((3,3))\n",
     "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]\n",
+      " [4]\n",
+      " [5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n1)\n",
+    "n1[np.newaxis, :5] \n",
+    "print(n1[:5, np.newaxis])"
    ]
   },
   {
@@ -309,7 +340,7 @@
     }
    ],
    "source": [
-    "# newaxis 이용한 행 변형\n",
+    "# newaxis 이용한 행 변형 \n",
     "\n",
     "x = np.array([1,2,3])\n",
     "x.reshape((1,3))\n",
@@ -1097,6 +1128,470 @@
    "source": [
     "print(a2)\n",
     "a2.swapaxes(1,0) # T와 같음 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 배열 크기 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9 2]\n",
+      " [5 4]\n",
+      " [7 2]\n",
+      " [6 5]\n",
+      " [8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n2 = np.random.randint(0, 10, (2,5))\n",
+    "n2\n",
+    "n2.resize((5,2))\n",
+    "print(n2) # resize 긴 한데, 모양이 바뀜"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9, 2, 5, 4, 7],\n",
+       "       [2, 6, 5, 8, 9],\n",
+       "       [0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n2.resize((5,5)) # 남은 공간은 0으로 채워짐\n",
+    "n2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 배열 추가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[10 11 12]\n",
+      " [13 14 15]\n",
+      " [16 17 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = np.arange(1,10).reshape(3,3)\n",
+    "b2 = np.arange(10, 19).reshape(3,3)\n",
+    "\n",
+    "print(a2)\n",
+    "print(b2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c2 = np.append(a2, b2)\n",
+    "print(c2) # 2차원 append시 1차원으로 됨 따로 지정 안하면.. axis 설정 필요 \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]\n",
+      " [13 14 15]\n",
+      " [16 17 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c2 = np.append(a2, b2, axis=0) # row로 .. 밑으로! \n",
+    "print(c2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3 10 11 12]\n",
+      " [ 4  5  6 13 14 15]\n",
+      " [ 7  8  9 16 17 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c2 = np.append(a2, b2, axis=1)\n",
+    "print(c2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 배열 연결 (concatenate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 5, 2, 4, 6])"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1 = np.array([1,3,5])\n",
+    "b1 = np.array([2,4,6])\n",
+    "np.concatenate([a1, b1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 5, 2, 4, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1 = np.array([7,8,9])\n",
+    "np.concatenate([a1,b1,c1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 1, 2, 3],\n",
+       "       [4, 5, 6, 4, 5, 6]])"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2 = np.array([[1,2,3],\n",
+    "              [4,5,6]])\n",
+    "\n",
+    "np.concatenate([a2,a2]) # 기본이 axis = 0, row로 붙음 \n",
+    "np.concatenate([a2,a2], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack([a2,a2]) # concatenate axis 0 과 같음 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 1, 2, 3],\n",
+       "       [4, 5, 6, 4, 5, 6]])"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack([a2,a2]) # concatenate axis 1과 같음 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 1],\n",
+       "        [2, 2],\n",
+       "        [3, 3]],\n",
+       "\n",
+       "       [[4, 4],\n",
+       "        [5, 5],\n",
+       "        [6, 6]]])"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dstack([a2,a2]) # 깊이 스택 (depth stack) , 3차원으로 연결 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2, 3],\n",
+       "        [4, 5, 6]],\n",
+       "\n",
+       "       [[1, 2, 3],\n",
+       "        [4, 5, 6]]])"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.stack([a2,a2]) # 새로운 차원으로 연결 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 배열 분할"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[0 1 2 3 4] [5 6 7 8 9]\n",
+      "[0 1] [2 3] [4 5] [6 7] [8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = np.arange(0,10)\n",
+    "print(a1)\n",
+    "b1, c1 = np.split(a1, [5]) # 5번 앞에서 나눔\n",
+    "print(b1, c1) \n",
+    "\n",
+    "b1, c1, d1, e1, f1 = np.split(a1, [2,4,6,8])\n",
+    "print(b1, c1, d1, e1, f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]] \n",
+      "\n",
+      "[[1 2 3]\n",
+      " [4 5 6]] \n",
+      "\n",
+      "[[7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = np.arange(1,10).reshape(3,3)\n",
+    "print(a2, \"\\n\")\n",
+    "b2, c2 = np.vsplit(a2, [2])\n",
+    "print(b2, \"\\n\")\n",
+    "\n",
+    "print(c2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[1 2]\n",
+      " [4 5]\n",
+      " [7 8]]\n",
+      "[[3]\n",
+      " [6]\n",
+      " [9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = np.arange(1,10).reshape(3,3)\n",
+    "print(a2) \n",
+    "\n",
+    "b2, c2 = np.hsplit(a2, [2])\n",
+    "print(b2)\n",
+    "print(c2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]\n",
+      "  [ 7  8  9]]\n",
+      "\n",
+      " [[10 11 12]\n",
+      "  [13 14 15]\n",
+      "  [16 17 18]]\n",
+      "\n",
+      " [[19 20 21]\n",
+      "  [22 23 24]\n",
+      "  [25 26 27]]]\n",
+      "[[[ 1  2]\n",
+      "  [ 4  5]\n",
+      "  [ 7  8]]\n",
+      "\n",
+      " [[10 11]\n",
+      "  [13 14]\n",
+      "  [16 17]]\n",
+      "\n",
+      " [[19 20]\n",
+      "  [22 23]\n",
+      "  [25 26]]]\n",
+      "[[[ 3]\n",
+      "  [ 6]\n",
+      "  [ 9]]\n",
+      "\n",
+      " [[12]\n",
+      "  [15]\n",
+      "  [18]]\n",
+      "\n",
+      " [[21]\n",
+      "  [24]\n",
+      "  [27]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a3 = np.arange(1,28).reshape(3, 3, 3)\n",
+    "print(a3) \n",
+    "\n",
+    "b3, c3 = np.dsplit(a3, [2])\n",
+    "print(b3)\n",
+    "print(c3)"
    ]
   },
   {
